<resources>
    <string name="app_name">Freegan</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="google_link">http://www.google.com</string>
    <string name="type_msg">Type message</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="no_favorites_saved">No favorite saved yet</string>
    <string name="action_unblock_user">Unblock user</string>
    <string name="enter_report_description">Enter report description</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait…</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading…</string>
    <string name="msg_no_user_found">No recent chats!</string>
    <string name="action_settings">Settings</string>
    <string name="image_description">Freegan Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logout_button_key">Logout Key</string>
    <string name="user_profile_image_key">User Profile Image Key</string>
    <string name="user_name_key">Username Key</string>
    <string name="user_email_key">User Email Key</string>
    <string name="user_password_key">User Password Key</string>
    <string name="user_location_key">User Location Key</string>
    <string name="privacy_policy_key">Privacy Policy Key</string>
    <string name="terms_and_conditions_key">Terms And Conditions key</string>
    <string name="terms_and_conditions_string">Terms and Conditions</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enter_email_edit_text">Enter email</string>
    <string name="enter_email_edit_text2">Enter new email</string>
    <string name="enter_password_edit_text">Enter password</string>
    <string name="enter_password_edit_text2">Enter new password</string>
    <string name="enter_password_edit_text3">Enter new password again</string>
    <string name="enter_full_name_edit_text">Enter full name</string>
    <string name="enter_full_name_edit_text2">Enter new name</string>
    <string name="register_button_text">Register</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_text_view">Not a member yet? Sign up now</string>
    <string name="login_text_view">Already a member? Login</string>
    <string name="enter_item_description">Enter item description</string>
    <string name="pref_header_general">General</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Mountain View, CA 94043</string>
    <string name="pref_privacy_label">Privacy</string>
    <string name="pref_privacy_key" translatable="false">privacy</string>
    <string name="pref_terms_of_service_label">Terms of Service</string>
    <string name="pref_terms_of_service_key" translatable="false">terms of service</string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="chats_title">Recent chats</string>
    <string name="attention_alert_title">ATTENTION !!!</string>
    <string name="title_string">title</string>
    <string name="class_cast_exception_string">Must implement OnCompleteListener</string>
    <string name="capital_yes_string">Yes</string>
    <string name="capital_no_string">Cancel</string>
    <string name="source_string">source</string>
    <string name="post_string">Post</string>
    <string name="camera_string">Camera</string>
    <string name="gallery_string">Gallery</string>
    <string name="alert_location_successfully_updated_string">Location successfully updated</string>
    <string name="post_image">Post image</string>
    <string name="enter_message_here">Enter message here…</string>
    <string name="contact_giver_button">Button when pressed help start chat with post owner</string>
    <string name="give_button">Button when clicked help start the process of posting new item</string>
    <string name="app_logo">App logo</string>
    <string name="action_edit_post">Edit post</string>
    <string name="action_share_post">Share post</string>
    <string name="action_delete_post">Delete post</string>
    <string name="user_display_picture">User profile display picture</string>
    <string name="action_block_user">Block User</string>
    <string name="action_recent_chats">Recent chats</string>
    <string name="action_report_user">Report User</string>
    <string name="update_button_text">Update</string>
    <string name="save_changes_string">Save changes</string>
    <string name="delete_string">Delete</string>
    <string name="edit_post_title">Edit post</string>
    <string name="back_arrow_description_string">Back arrow image, when clicked navigates user back to previous screen</string>
    <string name="favorite_button_description_string">Star button to mark a post item as favorite and store for future view.</string>
    <string name="pref_sort_list_key" translatable="false">pref_sort</string>
    <string name="err_no_network_connection_string">Error with network connection!</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_all_post">All</string>
    <string name="action_sort_by_favorite_post">Favorites</string>
    <string name="com_planetpeopleplatform_freegan_preference_favorite_file_key">favorite</string>
    <string name="help_string">Help</string>
    <string name="privacy_policy_string">Privacy Policy</string>
    <string name="log_out_string">Log out</string>
    <string name="location_string">Location</string>
    <string name="password_string">Password</string>
    <string name="email_string">Email</string>
    <string name="user_name_string">User name</string>
    <string name="profile_photo_string">Profile photo</string>
    <string name="alert_reason_for_report_missing_string">Reason for reporting user missing.</string>
    <string name="alert_image_text_suggestion_string">Image description suggested by Google FirebaseVisionImage!</string>
    <string name="alert_user_unblocked_successfully_string">User successfully unblocked!</string>
    <string name="alert_message_sent_successfully">Message sent successfully!</string>
    <string name="alert_user_blocked_successfully_string">User blocked successfully</string>
    <string name="alert_blocked_user_string">Chat blocked by participant!</string>
    <string name="alert_post_update_successful">Post update was successful!</string>
    <string name="alert_at_least_one_image_needed_string">At least one image is needed for this post!</string>
    <string name="alert_complete_action_using_string">Complete action using</string>
    <string name="alert_location_missing_string">Location needed to make post!</string>
    <string name="alert_permission_needed_string">Permission needed to complete action</string>
    <string name="alert_all_text_field_must_be_entered_string">All text fields must be entered properly!</string>
    <string name="alert_post_upload_successful">Post uploaded successfully!</string>
    <string name="alert_successfully_uploaded_photo_string">Successfully uploaded new photo!</string>
    <string name="alert_email_successfully_updated_string">Email successfully updated!</string>
    <string name="alert_password_successfully_updated_string">Password successfully updated!</string>
    <string name="alert_username_successfully_updated_string">Username successfully updated!</string>
    <string name="alert_freegen_successfully_shared_string">Freegan successfully shared with contact!</string>
    <string name="alert_permission_needed_to_post_and_view_freegan_string">Location needed for app to function properly, you can set your location at Settings!</string>
    <string name="choose_fragment_alert_tag">Choose fragment alert</string>
    <string name="delete_fragment_alert_tag">Delete fragment alert</string>
    <string name="err_user_block_failed_string">Error blocking user! Try again.</string>
    <string name="err_user_unblock_failed_string">Error unblocking user! Try again.</string>
    <string name="err_data_not_available_string">Data not available!</string>
    <string name="err_username_failed_to_update_string">Username failed to update!</string>
    <string name="err_email_failed_to_update_string">Email failed to update!</string>
    <string name="err_password_must_match_string">Password must match!</string>
    <string name="err_registration_failed_string">Registration failed</string>
    <string name="err_login_failed_string">login failed</string>
    <string name="err_post_upload_fail_string">Post upload failed:</string>
    <string name="err_message_sending_failed_string">Message failed to send!</string>
    <string name="err_image_missing_string">An image must be selected!</string>
    <string name="err_description_missing_string">Item must have description!</string>
    <string name="err_location_saving_string">There was an error saving the location to GeoFire:</string>
    <string name="err_upload_failed_string">upload failed</string>
    <string name="err_password_failed_to_update_string">Password failed to update!</string>
    <string name="error_decrypting_string">error decrypting</string>
    <string name="error_fetching_data_string">Error fetching data!</string>
    <string name="error_fetching_your_location_string">Error retrieving your current location!</string>
    <string name="error_image_text_suggestion_string">Sorry, something went wrong with image text suggestion!</string>
    <string name="err_image_source_unrecognized_string">Image from unrecognized source!</string>
    <string name="err_image_compression_string">Error compressing image!</string>
    <string name="err_google_play_service_error_string">Google Play Services error, please check your internet connection</string>
    <string name="notification_message">"New message from %1$s"</string>
    <string name="title_activity_message">Message</string>
    <string name="main_notification_channel_name">Main notification channel</string>
    <string name="appwidget_text">--</string>
    <string name="add_widget">Add widget</string>
    <string name="no_new_notification_string">No new notification</string>
    <string name="freegan_logo_string">App image logo</string>
    <string name="from_string">From :</string>
    <string name="message_string">Message:</string>
    <string name="date_string">Received at:</string>
    <string name="last_message_received">Last message received:</string>
    <string name="no_unread_message_string">No unread message</string>
    <string name="one_unread_message_string">1 unread message</string>
    <string name="unread_messages_string">unread messages</string>
    <string name="message_status_image_description">Image that indicates the status of the message sent, if delivered or read.</string>
</resources>