<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_recent_chats"
        android:title="@string/action_recent_chats"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sort_by"
        android:title="@string/action_sort_by"
        android:orderInCategory="100"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_sort_by_all_post"
                android:title="@string/action_sort_by_all_post"
                android:orderInCategory="200"
                app:showAsAction="never" />

            <item android:id="@+id/action_sort_by_favorite_post"
                android:title="@string/action_sort_by_favorite_post"
                android:orderInCategory="200"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>