<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="@dimen/profile_image_height"
            android:layout_height="@dimen/pad_40dp"
            android:layout_marginStart="@dimen/general_layout_margin"
            android:layout_marginEnd="@dimen/general_layout_margin"
            android:layout_marginBottom="@dimen/pad_8dp"
            android:ems="10"
            android:hint="@string/enter_full_name_edit_text"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHint="@color/whitebackground"
            android:textSize="@dimen/txt_18sp"
            app:layout_constraintBottom_toTopOf="@+id/email_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="@dimen/profile_image_height"
            android:layout_height="@dimen/pad_40dp"
            android:layout_marginStart="@dimen/general_layout_margin"
            android:layout_marginEnd="@dimen/general_layout_margin"
            android:layout_marginBottom="@dimen/pad_8dp"
            android:ems="10"
            android:hint="@string/enter_email_edit_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/whitebackground"
            android:textSize="@dimen/txt_18sp"
            app:layout_constraintBottom_toTopOf="@+id/password_edit_ext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_edit_ext"
            android:layout_width="@dimen/profile_image_height"
            android:layout_height="@dimen/pad_40dp"
            android:layout_marginStart="@dimen/general_layout_margin"
            android:layout_marginEnd="@dimen/general_layout_margin"
            android:layout_marginBottom="@dimen/pad_8dp"
            android:ems="10"
            android:hint="@string/enter_password_edit_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/whitebackground"
            android:textSize="@dimen/txt_18sp"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="@dimen/profile_image_height"
            android:layout_height="@dimen/pad_40dp"
            android:layout_marginStart="@dimen/general_layout_margin"
            android:layout_marginEnd="@dimen/general_layout_margin"
            android:layout_marginBottom="@dimen/pad_8dp"
            android:background="@drawable/round_corner_button"
            android:onClick="registerButtonTapped"
            android:text="@string/register_button_text"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/txt_14sp"
            app:layout_constraintBottom_toTopOf="@+id/go_to_login_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/go_to_login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_layout_margin"
            android:layout_marginEnd="@dimen/general_layout_margin"
            android:layout_marginBottom="60dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="goToLogin"
            android:text="@string/login_text_view"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textColor="@color/Secondary"
            android:textIsSelectable="false"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_image_height"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/profile_image_height"
            android:layout_height="@dimen/profile_image_height"
            android:layout_marginStart="@dimen/pad_8dp"
            android:layout_marginLeft="@dimen/pad_8dp"
            android:layout_marginEnd="@dimen/pad_8dp"
            android:layout_marginRight="@dimen/pad_8dp"
            android:contentDescription="@string/freegan_logo_string"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.650"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/freegan_logo_transparent" />

    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:layout_gravity="center"
        android:visibility="invisible" />

</android.support.design.widget.CoordinatorLayout>